[gd_scene load_steps=12 format=2]

[ext_resource path="res://images/Minifantasy_DungeonFloorTiles.png" type="Texture" id=1]
[ext_resource path="res://images/Minifantasy_DungeonWallTiles.png" type="Texture" id=2]
[ext_resource path="res://images/Minifantasy_DungeonDoorTiles.png" type="Texture" id=3]
[ext_resource path="res://TileMap.gd" type="Script" id=4]
[ext_resource path="res://CoreController.gd" type="Script" id=5]
[ext_resource path="res://units/Human.tscn" type="PackedScene" id=6]
[ext_resource path="res://tiles/Selected.tscn" type="PackedScene" id=7]
[ext_resource path="res://images/selected.png" type="Texture" id=8]
[ext_resource path="res://UIOverlayTileMap.gd" type="Script" id=9]

[sub_resource type="TileSet" id=1]
0/name = "Minifantasy_DungeonFloorTiles.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 56, 16 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 8, 8 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Minifantasy_DungeonFloorTiles.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 56, 16 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 32, 32 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Minifantasy_DungeonWallTiles.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 8, 8, 24, 32 )
2/tile_mode = 2
2/autotile/icon_coordinate = Vector2( 0, 0 )
2/autotile/tile_size = Vector2( 8, 8 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Minifantasy_DungeonDoorTiles.png 3"
3/texture = ExtResource( 3 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 8, 8 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "selected.png 0"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 8, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="BaseNode2D" type="Node2D"]
script = ExtResource( 5 )
human_sprite = ExtResource( 6 )
selected_scene = ExtResource( 7 )

[node name="TerrainTileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 4
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
format = 1
tile_data = PoolIntArray( 0, 2, 0, 1, 2, 1, 2, 2, 1, 3, 2, 1, 4, 2, 1, 5, 2, 1, 6, 2, 1, 7, 2, 2, 65536, 2, 65538, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 4, 65543, 2, 65538, 131072, 2, 65538, 131073, 0, 0, 131074, 0, 65537, 131075, 0, 0, 131076, 0, 2, 131077, 0, 0, 131078, 0, 0, 131079, 2, 65538, 196608, 2, 65538, 196609, 0, 2, 196610, 0, 0, 196611, 0, 3, 196612, 0, 3, 196613, 0, 0, 196614, 0, 0, 196615, 2, 65538, 262144, 2, 65538, 262145, 0, 0, 262146, 0, 5, 262147, 0, 0, 262148, 0, 5, 262149, 0, 65537, 262150, 0, 0, 262151, 2, 65538, 327680, 2, 65538, 327681, 0, 0, 327682, 0, 4, 327683, 0, 0, 327684, 0, 2, 327685, 0, 0, 327686, 0, 0, 327687, 2, 65538, 393216, 2, 65538, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 2, 65538, 458752, 2, 131072, 458753, 2, 131073, 458754, 2, 131073, 458755, 2, 131073, 458756, 2, 131073, 458757, 2, 131073, 458758, 2, 131073, 458759, 2, 131074 )
script = ExtResource( 4 )

[node name="UIOverlayTileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 4
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
format = 1
script = ExtResource( 9 )

[connection signal="tile_left_clicked" from="TerrainTileMap" to="." method="_on_TileMap_tile_left_clicked"]
[connection signal="tile_right_clicked" from="TerrainTileMap" to="." method="_on_TileMap_tile_right_clicked"]
